--- a/index.html
+++ b/index.html
@@ -2,125 +2,148 @@
 <html lang="cs">
 <head>
 <meta charset="UTF-8">
-<title>Alice – Tajná kapitola</title>
+<title>Soukromá stránka</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@500;700&display=swap" rel="stylesheet">
 
 <style>
-  body {
-    margin: 0;
-    height: 100vh;
-    background: radial-gradient(circle at top, #e9f3f6, #f6efe2);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: 'Cormorant Garamond', serif;
-  }
+html, body {
+  margin: 0;
+  height: 100%;
+  font-family: 'Cormorant Garamond', serif;
+}
 
-  .frame {
-    background: #fffaf0;
-    border: 6px solid #d4af37;
-    border-radius: 28px;
-    padding: 35px;
-    box-shadow:
-      inset 0 0 0 6px #6fa8dc,
-      0 25px 50px rgba(0,0,0,0.25);
-    max-width: 460px;
-    width: 90%;
-    text-align: center;
-  }
+/* Pozadí – slideshow */
+.background {
+  position: fixed;
+  inset: 0;
+  z-index: -1;
+}
 
-  h1 {
-    font-size: 30px;
-    margin-bottom: 10px;
-    color: #2f4f6f;
-    letter-spacing: 1px;
-  }
+.background img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  opacity: 0;
+  animation: fade 24s infinite;
+}
 
-  .subtitle {
-    font-size: 16px;
-    color: #7a5c2e;
-    font-style: italic;
-    margin-bottom: 25px;
-  }
+.background img:nth-child(1) { animation-delay: 0s; }
+.background img:nth-child(2) { animation-delay: 8s; }
+.background img:nth-child(3) { animation-delay: 16s; }
 
-  input {
-    width: 80%;
-    padding: 12px;
-    border-radius: 25px;
-    border: 2px solid #6fa8dc;
-    font-size: 16px;
-    text-align: center;
-    background: #fffdf6;
-  }
+@keyframes fade {
+  0% { opacity: 0; }
+  8% { opacity: 1; }
+  30% { opacity: 1; }
+  38% { opacity: 0; }
+  100% { opacity: 0; }
+}
 
-  button {
-    margin-top: 15px;
-    padding: 12px 32px;
-    border-radius: 30px;
-    border: none;
-    background: linear-gradient(#7fc4e8, #4f81bd);
-    color: white;
-    font-size: 16px;
-    cursor: pointer;
-    box-shadow: inset 0 1px 0 rgba(255,255,255,0.6);
-  }
+/* Ztmavení pozadí */
+.overlay {
+  position: fixed;
+  inset: 0;
+  background: rgba(0,0,0,0.35);
+}
 
-  button:hover {
-    background: linear-gradient(#8fd1f2, #5b9bd5);
-  }
+/* Obsah */
+.container {
+  position: relative;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-  img {
-    display: none;
-    margin-top: 25px;
-    max-width: 100%;
-    border-radius: 16px;
-    border: 4px solid #d4af37;
-    animation: storyReveal 1.4s ease forwards;
-  }
+.card {
+  background: rgba(255, 250, 240, 0.95);
+  padding: 42px 36px;
+  border-radius: 28px;
+  border: 4px solid #d4af37;
+  text-align: center;
+  max-width: 420px;
+  width: 90%;
+  box-shadow: 0 25px 50px rgba(0,0,0,0.35);
+}
 
-  .quote {
-    display: none;
-    margin-top: 18px;
-    font-size: 15px;
-    font-style: italic;
-    color: #555;
-  }
+h1 {
+  margin: 0 0 18px;
+  font-size: 30px;
+  color: #2f4f6f;
+  letter-spacing: 1px;
+}
 
-  @keyframes storyReveal {
-    from { opacity: 0; transform: scale(0.93); }
-    to { opacity: 1; transform: scale(1); }
-  }
+input {
+  width: 80%;
+  padding: 12px;
+  border-radius: 24px;
+  border: 2px solid #6fa8dc;
+  background: #fffdf6;
+  text-align: center;
+  font-size: 16px;
+}
+
+button {
+  margin-top: 16px;
+  padding: 12px 34px;
+  border-radius: 30px;
+  border: none;
+  background: linear-gradient(#7fc4e8, #4f81bd);
+  color: white;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+button:hover {
+  background: linear-gradient(#8fd1f2, #5b9bd5);
+}
+
+.hidden {
+  display: none;
+}
+
+.message {
+  margin-top: 20px;
+  font-size: 17px;
+  font-style: italic;
+  color: #444;
+}
 </style>
 </head>
 
 <body>
 
-<div class="frame">
-  <h1>📖 Tajná kapitola</h1>
-  <div class="subtitle">z říše divů</div>
+<!-- Pozadí -->
+<div class="background">
+  <img src="obrazek6.jpg" alt="">
+  <img src="obrazek9.jpg" alt="">
+  <img src="obrazek10.jpg" alt="">
+</div>
+<div class="overlay"></div>
 
-  <input type="password" id="password" placeholder="Kouzelné slovo">
-  <br>
-  <button onclick="checkPassword()">Otevřít knihu</button>
+<!-- Obsah -->
+<div class="container">
+  <div class="card">
+    <h1>Zadej heslo</h1>
 
-  <img id="image" src="obrazek.jpg" alt="Skrytý obrázek">
+    <input type="password" id="password" placeholder="Heslo">
+    <br>
+    <button onclick="unlock()">Pokračovat</button>
 
-  <div class="quote" id="quote">
-    „Pokud nevíš, kam jdeš, jakákoliv cesta tě tam dovede.“
+    <div class="message hidden" id="message">
+      Přístup byl povolen.
+    </div>
   </div>
 </div>
 
 <script>
-function checkPassword() {
-  const correctPassword = "alice";
-  const entered = document.getElementById("password").value;
-
-  if (entered === correctPassword) {
-    document.getElementById("image").style.display = "block";
-    document.getElementById("quote").style.display = "block";
+function unlock() {
+  if (document.getElementById("password").value === "heslo123") {
+    document.getElementById("message").classList.remove("hidden");
   } else {
-    alert("⏳ Zkus to znovu, čas tu plyne podivně…");
+    alert("Nesprávné heslo");
   }
 }
 </script>
